--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -38,7 +38,7 @@ input, button, select, textarea {
 #portal-header {
   border-top: none;
   border-bottom: none;
-  background:#f58d3d !important;
+  background:#f58d3d;
 }
 
 .ulearnbox h2 {
