--- a/ulearn/theme/scss/_maxui.scss
+++ b/ulearn/theme/scss/_maxui.scss
@@ -28,7 +28,7 @@
     clear: both;
     margin: 0;
     overflow: hidden;
-    padding: 10px;
+    padding: 0px 10px;
 }
 #maxui-newactivity {
     background: none repeat scroll 0 0 #34495E;
