--- a/ulearn/theme/scss/_maxui.scss
+++ b/ulearn/theme/scss/_maxui.scss
@@ -94,7 +94,7 @@
     left: -55px;
     max-width: 100%;
     position: absolute;
-    top: 0;
+    top: 5px;
 }
 .activities .maxui-activity-content {
     margin: 0 0 0 60px;
