--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -138,14 +138,14 @@ border-color: #34495E;
   // color: #f58d3d;
   float: left;
   padding-top: 10px;
-  margin-right: 10px;
+  margin-right: 7px;
   // font-size: 17px;
   // height: 32px;
   // margin-bottom: 7px;
   // text-align: center;
   // width: 100%;
 
-  // &:last-child { margin-bottom: 0px; }
+  &:last-child { margin-right: 0px; }
   // i { padding: 7px 0 0 0px; display: block; }
   &:hover { opacity:0.8; cursor:pointer; padding-top: 5px; transition: all 0.25s ease 0s; }
 }
@@ -610,4 +610,8 @@ border-color: #34495E;
 
 #box_thinkers.ulearnbox {
    padding: 5px 5px 10px 10px;
+}
+
+label[for="form.ext_editor"] ~ div.widget {
+  display: none;
 }
