--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -615,3 +615,8 @@ border-color: #34495E;
 label[for="form.ext_editor"] ~ div.widget {
   display: none;
 }
+
+#login-forgotten-password {
+  text-align: center;
+  margin-top: 10px;
+}
