--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -4100,3 +4100,9 @@ input[type="text"]:focus {
 label[for="form.ext_editor"] ~ div.widget {
   display: none;
 }
+
+/* line 619, ../scss/ulearn.scss */
+#login-forgotten-password {
+  text-align: center;
+  margin-top: 10px;
+}
