New ulearn alternate color theme and dynamic view.

--- a/ulearn/theme/scss/ulearn-alternate.scss
+++ b/ulearn/theme/scss/ulearn-alternate.scss
@@ -1,10 +1,11 @@
 @import "mixins";
 
-$main-color: #017000;
-$secondary-color: #24A33B;
-$maxui-form-bg: #DEDED6;
-$alt-gradient-start-color: #27B040;
-$alt-gradient-end-color: #229A38;
+// The green alternate version
+// $main-color: #017000;
+// $secondary-color: #24A33B;
+// $maxui-form-bg: #DEDED6;
+// $alt-gradient-start-color: #27B040;
+// $alt-gradient-end-color: #229A38;
 // Main
 
 a {
