--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -120,7 +120,7 @@ border-color: #34495E;
 }
 
 .ulearnbox {
-  background:url("/++ulearn++static/images/pix_cantonada.png") no-repeat right top white;
+  background: url("../pix_cantonada.png") no-repeat right top white;
   padding: 5px 10px 10px;
   clear:both;
   margin-bottom:20px;
