--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -1,4 +1,4 @@
-/*!
+/*
  *  Font Awesome 3.2.1
  *  the fa-iconic font designed for Bootstrap
  *  ------------------------------------------------------------------------------
@@ -2299,7 +2299,7 @@ input[type="text"]:focus {
   border-color: #34495E; }
 
 .ulearnbox {
-  background: url("/++ulearn++static/images/pix_cantonada.png") no-repeat right top white;
+  background: url("../pix_cantonada.png") no-repeat right top white;
   padding: 5px 10px 10px;
   clear: both;
   margin-bottom: 20px;
