--- a/ulearn/theme/stylesheets/login.css
+++ b/ulearn/theme/stylesheets/login.css
@@ -1,6 +1,6 @@
 
 html {
-  background: url(/++ulearn++static/images/background-login.jpg) no-repeat center center fixed;
+  background: url("../background-login.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
