--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -644,3 +644,7 @@ label[for="form.ext_editor"] ~ div.widget {
   text-align: center;
   margin-top: 10px;
 }
+
+.template-homepage #maxui-newactivity {
+  display: none;
+}
