--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -513,6 +513,7 @@ border-color: #34495E;
 
 .template-communities #content { background-color: white; }
 
+
 #searchcommunities {
   margin-right: auto;
   margin-left: auto;
@@ -535,6 +536,67 @@ border-color: #34495E;
     top: 2px;
     z-index: 10;
   }
+}
+
+
+#searchusers {
+  margin-right: auto;
+  margin-left: auto;
+  width: 300px;
+  padding-top: 10px;
+
+  .searchInput {
+    height: 25px;
+    font-size: 20px;
+    line-height: 25px;
+    width: 260px;
+  }
+
+  .add-on {
+    background-color: white;
+    border: none;
+    font-size: 20px;
+    position: relative;
+    right: 34px;
+    top: 2px;
+    z-index: 10;
+  }
+}
+
+#userlist {
+
+  ul {
+    list-style: none;
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
+
+  li {
+    background-color: white;
+    margin-bottom: 2px;
+
+    p {
+      color: #333;
+      line-height: 1em;
+
+      span {
+        margin-left: 5px;
+      }
+    }
+
+    .usuari_petit {
+      font-size: 0.8em;
+      font-weight: 400;
+      color: black;
+    }
+    .photo {
+      margin: 10px;
+      display: block;
+    }
+  }
+
 }
 
 #box_comunitats {
