Disable right column in the personal-information view. Fix user profile and related CSS.

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -597,9 +597,7 @@ border-color: #34495E;
     padding: 10px 20px;
   }
 
-  .portrait { width: 163px; }
-
-  .badges { margin-top: 5px; }
+  .badges { padding-left: 5px; }
 }
 
 // OJO! si canviem el nom de la seccio d'esdeveniments ha de canviar
