--- a/ulearn/theme/scss/_overrides.scss
+++ b/ulearn/theme/scss/_overrides.scss
@@ -92,3 +92,9 @@ nav#portal-personaltools-wrapper {
       margin-top: 36px !important;
     }
 }
+
+.template-personal-information [for="form.portrait"] ~ img {
+  float: none;
+  height: 100px;
+  width: auto;
+}
