Final search users

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -687,6 +687,13 @@ border-color: #34495E;
   }
 }
 
+.userslinks {
+  margin-left: 3px;
+  li {
+    list-style: none;
+  }
+}
+
 .favoritedisabled i {color: #eee}
 #communitylist .anycommunities a {color: #007BC0}
 
