--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -713,3 +713,7 @@ label[for="form.ext_editor"] ~ div.widget {
   text-align: center;
   margin-top: 10px;
 }
+
+.portaltype-ulearn-oportunity li > a#plone-contentmenu-workflow {
+  display: block;
+}
