--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2815,3 +2815,6 @@ label[for="form.ext_editor"] ~ div.widget {
 #login-forgotten-password {
   text-align: center;
   margin-top: 10px; }
+
+.portaltype-ulearn-oportunity li > a#plone-contentmenu-workflow {
+  display: block; }
